# fhir-clinical-summarizer

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRACTS.md  README.md  eval_report.md  execute-plan.md  pyproject.toml
.pi/tasks/: tasks-019f09db-8d2a-7d38-b4f3-2e41ad152900.json
examples/: alpha-summary.md
fixtures/: alpha.json  beta.json  gamma.json
scripts/: sample.py
src/clinical_core/: __init__.py
src/clinical_core/config/: __init__.py  settings.py
src/clinical_core/eval/: __init__.py  faithfulness.py
src/clinical_core/fhir/: __init__.py  extract.py  loader.py  models.py
src/clinical_core/llm/: __init__.py  client.py  types.py
src/summarizer/: __init__.py  app.py  cli.py  models.py  pipeline.py  prompts.py  render.py
tests/: _helpers.py  conftest.py  test_faithfulness.py  test_guardrail.py  test_llm_client.py  test_loader.py  test_loader_snapshot.py  test_pipeline.py  test_summarize.py
tests/__snapshots__/: test_loader_snapshot.ambr
